Bug 99785 - Pad button press events ignored on Wacom Intuos CTH-680
Summary: Pad button press events ignored on Wacom Intuos CTH-680
Status: RESOLVED FIXED
Alias: None
Product: Wayland
Classification: Unclassified
Component: libinput (show other bugs)
Version: unspecified
Hardware: x86-64 (AMD64) Linux (All)
: medium major
Assignee: Wayland bug list
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2017-02-12 23:09 UTC by Dalum
Modified: 2017-02-20 00:53 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments
evemu-describe of the pad (2.12 KB, text/plain)
2017-02-12 23:09 UTC, Dalum
Details
This patch fixes the issue (738 bytes, patch)
2017-02-13 00:04 UTC, Dalum
Details | Splinter Review

Description Dalum 2017-02-12 23:09:18 UTC
Created attachment 129540 [details]
evemu-describe of the pad
Comment 1 Dalum 2017-02-12 23:10:58 UTC
Buttons are labelled as follows:

BTN_RIGHT                 BTN_FORWARD
BTN_LEFT                     BTN_BACK
Comment 2 Dalum 2017-02-13 00:04:49 UTC
Created attachment 129541 [details] [review]
This patch fixes the issue
Comment 4 Peter Hutterer 2017-02-20 00:53:01 UTC
pushed as commit 25f9c1381b31e5fe3d886d06a1447fd1ebf36d0a, thanks


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.